# nocturnal

./: .env.example  .env.prod.example  .gitignore  LICENSE  deployment.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/auth/: router.py  schemas.py  utils.py
backend/banks/: router.py  schemas.py  service.py
backend/core/: config.py  crypto.py  deps.py  redis.py
backend/credit/: amortisation.py  bureau.py  router.py  schemas.py  scoring.py
backend/datasets/pan/: README.md  generate.py  uci_overlay.py
backend/datasets/pan/uci/: uci_mapping.md
backend/datasets/upload/: README.md  tier_gold.csv
backend/scripts/: generate_demo_users.py  seed_banks.py
backend/tests/: test_amortisation.py  test_bureau.py  test_counter_offer.py  test_crypto.py  test_datasets.py  test_rate_limits.py  test_router_encryption.py
contract/: README.md  compile.sh  credit_lending.compact  deploy.sh
contract/scripts/: deploy.mjs
dataset/upload/: tier_bronze.csv  tier_none.csv
frontend/: Dockerfile  index.html  nginx-frontend.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/public/contract/: credit_lending.compact
frontend/public/datasets/: anita_desai_silver.csv  meena_pillai_none.csv  priya_sharma_prime.csv  rahul_gupta_gold.csv  suresh_kumar_bronze.csv  vikram_singh_prime_fraudster.csv
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/components/: AmortisationSchedule.tsx  AppNav.tsx  EncryptedDownloadButton.tsx  ErrorBoundary.tsx  FactorCard.tsx  (+15 more)
(+42 files in other folders)
