[project]
name = "zkcredit-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "httpx>=0.27",
]

