[project]
name = "Nocturned-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "cryptography>=42,<46",
]

[project.optional-dependencies]
datasets = ["faker>=25,<31", "numpy>=1.26,<3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "fakeredis>=2.21"]

